fixed qa spacing and added owner to event

--- a/app/assets/stylesheets/profile.css.scss
+++ b/app/assets/stylesheets/profile.css.scss
@@ -10,9 +10,9 @@
       cursor: pointer;
     }
   }
-  .answer{min-height: 50px;}
-  p{min-height: 100px;}
-  textarea{width: 95%;padding: 5px 10px;margin: 0px 0px 5px;min-height: 50px;}
+  .answer{min-height: 15px;}
+  p{min-height: 15px;}
+  textarea{width: 95%;padding: 5px 10px;margin: 0px 0px 5px;min-height: 15px;}
 }
 .birthday{
   width: 75px;
